# devassistant

./: .gitignore  README.md  example.env  pyproject.toml  setup.py
challenge/: __main__.py  server.py
challenge/models/: __init__.py  embeddings.py  llms.py
challenge/prompts/: agent_prompt.py  query_engine_prompt.py
challenge/rag/: __init__.py  query_engine.py  rag_agent.py
challenge/slack/: api.py
challenge/vector_store/: __init__.py  base_vs.py  chroma_vs.py
evaluation/: models_evaluation.ipynb
